# rpip

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  QUICKSTART.md  README.md  TESTING.md  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: test.yml
rpip/: __init__.py  main.py
tests/: README.md  __init__.py  test_download.py  test_integration.py  test_main.py
tests/fixtures/: requirements-nested.txt  requirements-with-options.txt  requirements.txt  requirements_local.txt
