[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "syblock-rpip"
version = "0.1.0"
description = "Resumable Package Installer - a wrapper around pip for robust downloads"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT License"}
authors = [
    {name = "SyBlock", email = "syblock.dev@gmail.com"}
]
keywords = ["pip", "package", "installer", "resumable", "download", "retry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Installation/Setup",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/syblock/rpip"
"Bug Reports" = "https://github.com/syblock/rpip/issues"
"Source" = "https://github.com/syblock/rpip"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.6.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.6.0",
    "coverage>=6.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.scripts]
rpip = "rpip.main:main"

[tool.setuptools]
packages = ["rpip"]
