[metadata]
name = syblock-rpip
version = attr: rpip.__version__
author = SyBlock
author_email = syblock.dev@gmail.com
description = Resumable PIP - a wrapper around pip for robust downloads.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/syblock/rpip
project_urls =
    Bug Reports = https://github.com/syblock/rpip/issues
    Source = https://github.com/syblock/rpip
keywords = pip, package, installer, resumable, download, retry
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Topic :: System :: Installation/Setup
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    Environment :: Console

[options]
packages = find:
python_requires = >=3.7
install_requires =
    # No direct Python dependencies beyond standard library

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=3.0.0
    pytest-mock>=3.6.0
    coverage>=6.0
test =
    pytest>=7.0.0
    pytest-cov>=3.0.0
    pytest-mock>=3.6.0

[options.entry_points]
# This line creates the 'rpip' command executable in the user's environment
console_scripts =
    rpip = rpip.main:main